force-app/main/default/objects/Oktopost_Social_Post__c/Oktopost_Social_Post__c.object-meta.xml
<CustomObject>
    <label>Oktopost Social Post</label>
    <nameField>
        <displayFormat>PL-{000000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Oktopost Social Posts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>