force-app/main/default/objects/Oktopost_Social_Post__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>