force-app/main/default/objects/Oktopost_Social_Post__c/fields/Detailed_Expands__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Expands__c</fullName>
    <label>Detailed Expands</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>