force-app/main/default/objects/Oktopost_Social_Post__c/fields/Likes__c.field-meta.xml
<CustomField>
    <fullName>Likes__c</fullName>
    <label>Likes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>