force-app/main/default/objects/Oktopost_Social_Post__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <label>Network</label>
    <length>16</length>
    <type>Text</type>
</CustomField>