force-app/main/default/objects/Oktopost_Social_Post__c/fields/Network_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Network_Account_Name__c</fullName>
    <label>Network Account Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>