force-app/main/default/objects/Oktopost_Social_Post__c/fields/Oktopost_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Oktopost_User_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oktopost User</label>
    <referenceTo>Oktopost_User__c</referenceTo>
    <relationshipLabel>Oktopost Social Posts</relationshipLabel>
    <relationshipName>Oktopost_Social_Posts</relationshipName>
    <type>Lookup</type>
</CustomField>