force-app/main/default/objects/Oktopost_Social_Post__c/fields/Post_Clicks__c.field-meta.xml
<CustomField>
    <fullName>Post_Clicks__c</fullName>
    <label>Post Clicks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>