force-app/main/default/objects/Oktopost_Social_Post__c/fields/Postlog_Id__c.field-meta.xml
<CustomField>
    <fullName>Postlog_Id__c</fullName>
    <label>Postlog Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>