force-app/main/default/objects/Oktopost_Social_Post__c/fields/PostlogId_Date__c.field-meta.xml
<CustomField>
    <fullName>PostlogId_Date__c</fullName>
    <externalId>true</externalId>
    <label>Post At Date</label>
    <length>36</length>
    <type>Text</type>
</CustomField>