force-app/main/default/objects/Oktopost_Social_Post__c/fields/Posts__c.field-meta.xml
<CustomField>
    <fullName>Posts__c</fullName>
    <formula>if( Date__c == DATEVALUE( StartDateTime__c ), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Posts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>