force-app/main/default/objects/Oktopost_Social_Post__c/fields/Shares__c.field-meta.xml
<CustomField>
    <fullName>Shares__c</fullName>
    <label>Shares</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>