force-app/main/default/objects/Oktopost_Social_Post__c/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <label>Shared Time</label>
    <type>DateTime</type>
</CustomField>