force-app/main/default/objects/Oktopost_Social_Post__c/fields/User_Follows__c.field-meta.xml
<CustomField>
    <fullName>User_Follows__c</fullName>
    <label>User Follows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>